# CHomeworks

./: .gitignore  README.md  build.sh
.github/workflows/: build.yml
CW1/first/: CMakeLists.txt  first.c
CW1/second/: CMakeLists.txt  shellSort.c
CW11/third/: CMakeLists.txt  main.c
CW2/first/: CMakeLists.txt  main.c  queue.c  queue.h
CW21/: CMakeLists.txt
CW21/second/: CMakeLists.txt  fileReaderFileWriter.c  fileReaderFileWriter.h  main.c  queue.c  queue.h  tests.c
Credit1/first/: CMakeLists.txt  main.c
Credit1/second/: main.c  queue.c  queue.h  stack.c  stack.h  tests.c
HW1/: CMakeLists.txt
HW1/incompleteQuotient/: CMakeLists.txt  main.c
HW1/swap/: CMakeLists.txt  main.c
HW10/Graph/: CMakeLists.txt  algorithmOfDijkstra.c  algorithmOfDijkstra.h  fileReader.c  fileReader.h  graph.c  graph.h  hashTable.c  hashTable.h  list.c  list.h  main.c  states.c  states.h  testfile.txt  tests.c  tests.h
HW2/Sorts/: .gitignore  CMakeLists.txt  sorts.c
HW2/fibonacci/: CMakeLists.txt  fibonacci.c  fibonachi.c
HW2/fibonachchi/: fibonachi.c
HW2/halfQSort/: CMakeLists.txt  halfQSort.c
HW2/power/: CMakeLists.txt  power.c
HW2/sorts/: sorts.c
HW3/mostCommonElement/: CMakeLists.txt  mostCommonElement.c
HW3/search/: CMakeLists.txt  search.c
HW3/smartQSort/: CMakeLists.txt  smartQSort.c
HW4/binaryRepresentation/: CMakeLists.txt  binaryRepresentation.c  telephoneRepresentation.c
HW4/modulesAndFiles/: CMakeLists.txt  fileReader.c  fileReader.h  quickSort.c  (+2 more)
HW6/mergeSort/: CMakeLists.txt  list.c  list.h  main.c
huffmanArchiver/: main.c  tree.c  tree.h
(+60 files in other folders)
